# relative-abundance

./: .Rhistory  LICENSE.txt  README.md  main.py  pyproject.toml
analysis/: .RData  .Rhistory  plot.py  root:Host-associated:Human:Digestive%20system:Large%20intestine:Fecal.csv  root:Host-associated:Human:Digestive%20system:Large%20intestine:Fecal_first.csv
analysis/asserts/relevent_MCnify_study_info/: search_download_(skin).csv
analysis/fetch_studies/amplicon/: uniq-pmids.tsv
analysis/fetch_studies/assembly/: __init__.py  fetch_studies.py
analysis/fetch_studies/fecal/assembly/: bioprojects.tsv  bioprojects_amp.tsv  bioprojects_ass.tsv  fetch_studies.py  fetch_studies_assembly.csv  fetch_studies_op.py  pmids.tsv  (+4 more)
analysis/training_mgnify_api/: MGYS00002474_phylum.csv  MGYS00005333_downloads.csv  exercise1.py  exercise1_mod.csv  try_api_fecal_order.json
analysis/training_mgnify_api/MGYS00005575/: MGYS00005575_metadata.tsv
docs/: available_biomes.csv  fecal_biomes.csv  index.json  list_all_biomes.sh  try_api.json  try_api.sh  try_api_fecal.json  try_api_fecal_order.json  try_api_fecal_studies.json  try_api_fecal_temp.json
go/: biomes_fecal_all.csv  pub_fecal_all.csv  pub_fecal_amplicon.csv  studies_fecal_amplicon.csv  studies_fecal_assembly.csv
lib/: add_experiment_type.py  get_publication.py  get_publication.sh  json_to_csv.py  print_column.py
src/relative_abundance/: __about__.py  entire_dict  fetch_studies.py
src/relative_abundance/analysis/: ERP108859_taxonomy_abundances_LSU_v5.0.tsv  ERP108859_taxonomy_abundances_SSU_v5.0.tsv  fetch_OTU_links.sh  fetch_studies.csv  fetch_studies.py  plot_sample_count.py  plot_sample_count.r  study_ids.csv
src/relative_abundance/lib/: get_pub_trial.py  get_publication.py  get_publication.sh  out.xml
(+46 files in other folders)
