[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relative-abundance"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "vidyasagar0405", email = "vidyasagar0405@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/vidyasagar0405/relative-abundance#readme"
Issues = "https://github.com/vidyasagar0405/relative-abundance/issues"
Source = "https://github.com/vidyasagar0405/relative-abundance"

[tool.hatch.version]
path = "src/relative_abundance/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/relative_abundance tests}"

[tool.coverage.run]
source_pkgs = ["relative_abundance", "tests"]
branch = true
parallel = true
omit = [
  "src/relative_abundance/__about__.py",
]

[tool.coverage.paths]
relative_abundance = ["src/relative_abundance", "*/relative-abundance/src/relative_abundance"]
tests = ["tests", "*/relative-abundance/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
